Additional fixups.
* Timestamp fields weren't displaying correctly
* Some explanation text was too indented
* H2s were too large

--- a/api/ereqs_admin/static/admin/overrides/django/_base.scss
+++ b/api/ereqs_admin/static/admin/overrides/django/_base.scss
@@ -56,5 +56,5 @@ a.button {
 .module h2,
 .module caption,
 .inline-group h2 {
-  @include size-large();
+  @include size-regular();
 }
