--- a/shared-styles/base/_colors.scss
+++ b/shared-styles/base/_colors.scss
@@ -2,7 +2,7 @@ $color-black:               #000000;
 $color-dk-gray:             #222222;
 $color-gray:                #727375;
 $color-lt-gray:             #cecfd1;
-$color-very-lt-gray:        #F0F0F0;
+$color-very-lt-gray:        #f0f0f0;
 $color-white:               #ffffff;
 
 $color-navy:                #112e51;
